package com.example.factory.linux;

import com.example.factory.OsDisplaySystem;

public class LinuxDisplaySystem extends OsDisplaySystem {

	@Override
	public void displayOsName() {
		// TODO Auto-generated method stub
		
	}

	@Override
	public void displayStr(String str) {
		// TODO Auto-generated method stub
		
	}
  
}
