package com.example.factory.linux;

import com.example.factory.OsDisplaySystem;
import com.example.factory.OsFactory;
import com.example.factory.OsFileSystem;

public class LinuxFactory extends OsFactory {

	@Override
	public OsFileSystem createFileSystem() {
		// TODO Auto-generated method stub
		return null;
	}

	@Override
	public OsDisplaySystem createDisplaySystem() {
		// TODO Auto-generated method stub
		return null;
	}
  
}
