package com.example.factory.linux;

import com.example.factory.OsFileSystem;

public class LinuxFileSystem extends OsFileSystem {

	@Override
	public String getFileSeparetor() {
		// TODO Auto-generated method stub
		return null;
	}

	@Override
	public String getRootPath() {
		// TODO Auto-generated method stub
		return null;
	}

	@Override
	public void saveFile(String fileName) {
		// TODO Auto-generated method stub
		
	}
  
}
